incluindo ultimos ajustes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+/*criar variaveis*/
+$background-color:#252525 !important;
+$font-color:#fff !important;
+
+/*utilizando a variavel*/
+.p-card{
+    background-color: $background-color;
+    color: $font-color;
+}
