--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,39 @@
 
-<div>{{title}}</div>
+<p-card>
+    <div>{{title}}</div>
+</p-card>
+
+<div class="card">
+    <h5>Responsive</h5>
+    <div class="grid">
+        <div class="col-12 md:col-6 lg:col-3">
+            <div class="box">col-12 md:col-6 lg:col-3</div>
+        </div>
+        <div class="col-12 md:col-6 lg:col-3">
+            <div class="box">col-12 md:col-6 lg:col-3</div>
+        </div>
+        <div class="col-12 md:col-6 lg:col-3">
+            <div class="box">col-12 md:col-6 lg:col-3</div>
+        </div>
+        <div class="col-12 md:col-6 lg:col-3">
+            <div class="box">col-12 md:col-6 lg:col-3</div>
+        </div>
+    </div>
+</div>
+
+<!--<p-card header="Advanced Card" subheader="Card Subheader" [style]="{ width: '360px' }">
+    <ng-template pTemplate="header">
+        <img alt="Card" src="https://primefaces.org/cdn/primeng/images/card-ng.jpg" />
+    </ng-template>
+    <p>
+        Lorem ipsum dolor sit amet...
+    </p>
+    <ng-template pTemplate="footer">
+        <div class="flex gap-3 mt-1">
+            <p-button label="Cancel" severity="secondary" class="w-full" styleClass="w-full" />
+            <p-button label="Save" class="w-full" styleClass="w-full" />
+        </div>
+    </ng-template>
+</p-card>
+-->
 <router-outlet />
