--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-/*criar variaveis*/
+/*criar variaveis, o bom de utilizar varialvel, que a onde usar essa variavel vai trocar se eu mudar a cor,
+isso pode facilitar caso uma empresa faça uma canpanha de natal e mude o layou para vermelho*/
 $background-color:#252525 !important;
 $font-color:#fff !important;
 
