--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<p-card>
+<!--<p-card>
     <div>{{title}}</div>
 </p-card>
 
@@ -20,7 +20,7 @@
         </div>
     </div>
 </div>
-
+--!>
 <!--<p-card header="Advanced Card" subheader="Card Subheader" [style]="{ width: '360px' }">
     <ng-template pTemplate="header">
         <img alt="Card" src="https://primefaces.org/cdn/primeng/images/card-ng.jpg" />
@@ -36,4 +36,5 @@
     </ng-template>
 </p-card>
 -->
+
 <router-outlet />
